--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -17,12 +17,12 @@
     "title": "Smart Travel with Local Insights",
     "subtitle": "Navigate effortlessly with highly intuitive smart maps, real-time personalized suggestions, and AI-powered travel insights.",
     "smartTravel": {
-      "title": "Smart Travel",
+      "title": "Welcome to Smart AppKey",
       "description": "Travel effortlessly with intelligent and intuitive maps always at your fingertips. Customise your trip according to your needs and desires with search filters and customisation features that allow you to find the experiences, places and venues that suit you best."
     },
     "experiences": {
       "title": "Try Our Experiences",
-      "description": "You will get access to exclusive discounts, special offers, reserved benefits and promotions, fun challenges, and games dedicated to sustainability and discovering the territory."
+      "description": "Immerse yourself in the fabric of the land through original and customised experiences just for you. Discover these lands through their customs, dishes, drinks, adventures, festivals and more."
     },
     "rewards": {
       "title": "Unlock Rewards & Special Perks",
