--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -66,7 +66,8 @@
   },
   "map": {
     "search": {
-      "placeholder": "Cerca luoghi e percorsi..."
+      "placesPlaceholder": "Cerca luoghi...",
+      "routesPlaceholder": "Cerca percorsi..."
     },
     "legend": "Legenda",
     "pointsOfInterest": "Punti di Interesse",
@@ -117,6 +118,7 @@
       "noRoutes": "Nessun percorso ciclistico disponibile"
     },
     "planner": {
+      "name": "Pianifica Percorso",
       "options": "Opzioni Percorso",
       "yourRoute": "Il Tuo Percorso",
       "summary": "Riepilogo Percorso",
