Implementing business offers

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -73,6 +73,11 @@
     "legend": "Legend",
     "pointsOfInterest": "Places",
     "bikeRoutes": "Routes",
+    "offers": "Offers",
+    "availableOffers": "Available Offers",
+    "backToOffers": "Back to offers",
+    "noOffersAvailable": "No special offers available right now",
+    "showThisCode": "Show this QR code to redeem the offer",
     "navigation": {
       "title": "Turn-by-Turn Directions"
     },
