Added access to user profile from main map view

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -160,6 +160,7 @@
       "shop": "Shop",
       "experiences": "Experiences",
       "routes": "Routes",
+      "offers": "Offers",
       "profile": "Profile",
       "mapList": "Map/List"
     },
