--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -159,6 +159,7 @@
       "shop": "Negozio",
       "experiences": "Esperienze",
       "routes": "Percorsi",
+      "offers": "Offerte",
       "profile": "Profilo",
       "mapList": "Mappa/Lista"
     },
