Adding search functions to offers, fixed a few strings, improved map/list switch behaviour

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -68,7 +68,8 @@
 "map": {
     "search": {
       "placesPlaceholder": "Search places...",
-      "routesPlaceholder": "Search routes..."
+      "routesPlaceholder": "Search routes...",
+      "offersPlaceholder": "Search offers..."
     },
     "legend": "Legend",
     "pointsOfInterest": "Places",
